# wishlist_share

./: README.md
back-end/: Cargo.toml
back-end/sql/: db_create.sql  stored_procedures.sql
back-end/src/: main.rs
back-end/src/db/: generated_procedures.rs  generated_types.rs  mod.rs
front-end/: package-lock.json  package.json  vite.config.js
front-end/src/: App.svelte
front-end/src/lib/: FamilyView.svelte  WishlistView.svelte  store.js
front-end/src/routes/: +layout.svelte  +page.svelte
front-end/src/routes/wishlist/: +page.svelte
