[package]
name = "back-end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features=["json"]}
async-std = {version="1.12.0", features = ["attributes"]}
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres", "macros" ] }
serde_json = "1.0.114"
